// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Callout card component should match snapshot when image prop is passed 1`] = `
<div>
  <article
    class="card card--callout"
    data-component="card--callout"
    data-tracking="card--callout"
  >
    <div
      class="card__image"
    >
      <picture>
        <source
          srcset="/test.JPG/m/filters:format%28avif%29:quality%2880%29"
          type="image/avif"
        />
        <source
          srcset="/test.JPG/m/filters:format%28webp%29:quality%2880%29"
          type="image/webp"
        />
        <img
          alt="callout card image"
          class="calloutImageContainer"
          data-nimg="1"
          decoding="async"
          height="600"
          loading="lazy"
          src="/_next/image?url=%2Ftest.JPG%2Fm%2Ffilters%3Aformat%2528jpeg%2529%3Aquality%252880%2529&w=1200&q=75"
          srcset="/_next/image?url=%2Ftest.JPG%2Fm%2Ffilters%3Aformat%2528jpeg%2529%3Aquality%252880%2529&w=640&q=75 1x, /_next/image?url=%2Ftest.JPG%2Fm%2Ffilters%3Aformat%2528jpeg%2529%3Aquality%252880%2529&w=1200&q=75 2x"
          style="color: transparent; max-width: 100%; height: auto;"
          width="600"
        />
      </picture>
    </div>
    <div
      class="card__text"
    >
      <header
        class="card__header"
      >
        <p
          class="card__heading"
        >
          <a
            href="https://nice.org.uk/guidance/ta10"
          >
            Mock card title
          </a>
        </p>
      </header>
      Mock card summary
    </div>
  </article>
</div>
`;

exports[`Callout card component should match snapshot with default values 1`] = `
<div>
  <article
    class="card card--callout"
    data-component="card--callout"
    data-tracking="card--callout"
  >
    <header
      class="card__header"
    >
      <p
        class="card__heading"
      >
        <a
          href="https://nice.org.uk/guidance/ta10"
        >
          Mock card title
        </a>
      </p>
    </header>
    Mock card summary
  </article>
</div>
`;
